--- a/Coming_soon.css
+++ b/Coming_soon.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("imagini/Introducere.jpg");
+    background-image: url("imagini/contact.jpg");
 	background-size: cover;
 }
 
@@ -50,6 +50,7 @@ nav a{
     font-style: normal;
 	
 }
+
 #logo{
 	display:inline-block;
 	float: left;
@@ -68,86 +69,33 @@ li:hover{
 	float: right;
 }
 
-.grid-container{
-    display:grid;
-    grid-template-rows: auto;
-    grid-template-columns: auto auto auto;
-    gap: 20px;
+.continut{
+	background: rgba(0, 0, 0, 0.5);
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    align-content: center;
-}
-
-.grid-text{
-	background: rgba(0, 0, 0, 0.5);
-    font-family: averia-sans-libre;
-    text-indent: 50px;
+	color:white;
+	font-family: averia-sans-libre;
     font-weight: 400;
     font-style: normal;
     text-align: justify;
-    color: white;
-    margin-left: auto;
-    margin-right: auto;
-	font-size:20px;
-    align-items: center;
 }
 
-.grid-text i:hover{
-	color:#00c8ff;
-	cursor:pointer;
+.continut b{
+	 color: #00c8ff;
 }
 
-.grid-container1{
-    display:grid;
-    grid-template-rows: auto;
-    gap: 20px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    align-content: center;
+a{
+	color:white;
+	text-decoration: none;
 }
 
-
-.lista{
-    color:white;
-	font-family: crafty-girls;
-	text-align: justify;
-	font-size:20px; 
-    text-shadow: 2px 2px #000000;
-    max-width: 1200px;
-    background-color: #001d26;
-    border: 2px inset #00c8ff;
-    font-style: normal;
-    font-weight: 400;
-}
-
-.lista ul{
-	 list-style-type: none;
-}
-
-.lista b{
-	color:#00c8ff;
+a:hover{
+	color: #00c8ff;
+	text-decoration: underline;
 }
 
 .subsol{
-	color:white;
-	max-width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 80px;
-	text-align: center;
-	font-family: crafty-girls;
-    text-shadow: 2px 2px #000000;
-	display:block;
-    background-color: #001d26;
-    border: 2px inset #00c8ff;
-    font-style: normal;
-    font-weight: 400;
-	font-size:14px;
-}
-
-h1{
 	font-family: crafty-girls;
     text-shadow: 2px 2px #000000;
 	display:block;
@@ -159,30 +107,29 @@ h1{
     border: 2px inset #00c8ff;
     font-style: normal;
     font-weight: 400;
-	color:#00c8ff;
+	color:white;
 	text-align: center;
 }
 
-.grid-container img{
-    width: 100%;
-    height: auto;
-    max-width: 100%;
-}
-.grid-container{
-    align-items: center;
-}
-
-input{
-    background-color:#001d26;
-    color: #00c8ff;
-    font-size: 20px;
-    border: none;
-}
-input:hover{
-    opacity: 0.5;
-    cursor:pointer;
+#titlu h1{
+	font-family: crafty-girls;
+    text-shadow: 2px 2px #000000;
+	display:block;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+	margin-top: 1%;
+    background-color: #001d26;
+    border: 2px inset #00c8ff;
+    font-style: normal;
+    font-weight: 400;
+	color:#00c8ff;
+	text-align: center;
+    text-indent: 0px;
 }
 
-.grid-image:hover{
-    cursor: pointer;
+.continut h1{
+    margin-left: 20px;
+    margin-right: 20px;
+    text-indent: 50px;
 }
