--- a/Creatii.css
+++ b/Creatii.css
@@ -117,15 +117,48 @@ h1{
 	text-align: center;
 }
 
+/* h2{
+	color:#00c8ff;
+	background-color: #001d26;
+    border: 2px inset #00c8ff;
+	max-width: 900px;
+	text-align: center;
+} */
+
 .continut i:hover{
 	color:#00c8ff;
 	cursor:pointer;
 }
 
-.grid-container{
-    gap:20px;
-    display:grid;
-    grid-template-columns: auto;
+.imagini{
+    display:inline-block;
+    /* grid-template-columns: auto auto auto; */
     max-width: 1200px;
     align-content: center;
 }
+
+button{
+    background-color:#001d26;
+    color: #00c8ff;
+    font-size: 20px;
+    border: none;
+}
+
+button:hover{
+    cursor:pointer;
+}
+
+input{
+    background-color:#001d26;
+    color: #00c8ff;
+    font-size: 20px;
+    border: 2px solid #00c8ff ;
+}
+
+hr{
+    opacity: 0;
+}
+
+::placeholder {
+    color: #00c8ff;
+  }
